# tis-aidga

./: .gitignore  README.md  batch_generate_drivers.py  benchmark.py  generate_site.py  pyproject.toml
batch_configs/: json_c.json  linux_xpad.json  tinycrypt.json
gui/: README.md  index.html  package-lock.json  package.json  tsconfig.server.json
gui/server/: index.ts
gui/src/: App.tsx  styles.css
log_11_28-11h2758/: 002_generator_iter1_query.md  003_generator_iter1_driver.c  004_validation_iter1.json  005_validation_iter1_error.txt
tests/: test_cc.py  test_config.py  test_project_manager.py  test_utils.py
tis_driver_agent/: __init__.py  builtins.c  cc.py  cli.py  config.py  graph.py  state.py  workflow_logger.py
tis_driver_agent/cli/: __init__.py  __main__.py  completers.py  helpers.py
tis_driver_agent/cli/commands/: __init__.py  context.py  gen.py  init.py  list.py  models.py  reindex.py
tis_driver_agent/context/: __init__.py  assembler.py  index.py  lookup.py  models.py  parser.py
tis_driver_agent/models/: __init__.py  anthropic_adapter.py  factory.py  ollama_adapter.py  openai_adapter.py  registry.py
tis_driver_agent/nodes/: __init__.py  generator.py  planner.py  refiner.py  router.py  skeleton.py  validator.py
tis_driver_agent/prompts/: __init__.py  templates.py
tis_driver_agent/stubs/: tis_builtin.h
tis_driver_agent/tis/: __init__.py  base.py  local.py  remote.py
tis_driver_agent/utils/: __init__.py  compilation_db.py  context_builder.py  context_detector.py  project_manager.py
