[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tisaidga"
version = "0.1.0"
description = "AI-powered driver generation for TrustInSoft Analyzer"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.0.30",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "paramiko>=3.0.0",
    "argcomplete>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
tisaidga = "tis_driver_agent.cli:main"

[tool.setuptools.packages.find]
include = ["tis_driver_agent*"]
